issue-33: Applied z-index of 9999.  This can be adjusted to accomodate individual integration needs

--- a/src/components/main-navigation/_main-navigation.scss
+++ b/src/components/main-navigation/_main-navigation.scss
@@ -9,6 +9,7 @@
   transform: translateX(-100%);
   visibility: hidden;
   outline: none;
+  z-index: 9999;
 
   &.is-opening,
   &.is-open {
